validation form + favicon

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
         <title>Portfolio | Développeuse Web Etudiante </title>
-
+        <!-- Favicons -->
+        <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon//favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon//favicon-16x16.png">
+        <link rel="manifest" href="assets/images/favicon//site.webmanifest">
+        <link rel="mask-icon" href="assets/images/favicon//safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
         <!-- CSS + FONTS -->
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Arizonia&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Qwigley&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,29 +23,26 @@
 
         <!-- SDK EmailJS -->
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-        <script type="text/javascript">
-            
-        </script>
     </head>
     <body>
 	
         <header>
-            <div class="row z-depth-4" style="margin: 0px; text-align: center;">
+            <div class="row" style="margin: 0px; text-align: center;">
                 <div class="border-top-right"></div>
-                <nav class="white nav">
-                <div class="logo">
-                    <h6 class="textShadow">CS</h6>
-                </div>
-                <div class="nav-wrapper col s12 m12">
-                    <ul class="right hide-on-med-and-down">
-                    <li><a class="head-link" href="#aPropos">A propos</a></li>
-                    <li><a class="head-link" href="#competences">Compétences</a></li>
-                    <li><a class="head-link" href="#portfolio">Portfolio</a></li>
-                    <li><a class="head-link" href="#formations">Formations</a></li>
-                    <li><a class="head-link" href="#contact">Me contacter</a></li>
-                    </ul>
-                    <a href="#" data-target="slide-out" class="sidenav-trigger right"><i class="material-icons">menu</i></a>
-                </div>
+                <nav class="white nav z-depth-2">
+                    <div class="logo">
+                        <img src="assets/images/logo.png" alt="Logo C.S" class="logo-img">
+                    </div>
+                    <div class="nav-wrapper col s12 m12">
+                        <ul class="right hide-on-med-and-down">
+                        <li><a class="head-link" href="#aPropos">A propos</a></li>
+                        <li><a class="head-link" href="#competences">Compétences</a></li>
+                        <li><a class="head-link" href="#portfolio">Portfolio</a></li>
+                        <li><a class="head-link" href="#formations">Formations</a></li>
+                        <li><a class="head-link" href="#contact">Me contacter</a></li>
+                        </ul>
+                        <a href="#" data-target="slide-out" class="sidenav-trigger right"><i class="material-icons">menu</i></a>
+                    </div>
                 </nav>
             </div>
         </header>
@@ -69,13 +73,13 @@
                 <div class="container">
                 <h6 class="center-align competences white-text">Présentation</h6>
                 <div class="row">
-                    <div class="col s12 l6 text">
+                    <div class="col s12 l7 text">
                         <p>Développeuse junior, j'étudie depuis 8 mois un métier qui assouvit ma curiosité et me fait découvrir un monde passionnant et en perpétuelle évolution.</p>
                         <p>Je viens d'obtenir ma certification Développeur Codeur Web avec <a class="teal-text text-lighten-4" href="https://www.wf3.fr/?gclid=CjwKCAjwlYCHBhAQEiwA4K21m_RNDbUkAEaCjhMsEp42QgIg25btfTO18r0kfw6n8ZvoaZ6PwwucMBoCRZIQAvD_BwE" target="_blank">WebForce3</a> et vais bientôt entrer à la <a href="https://nfactory.school/" class="teal-text text-lighten-4" target="_blank">NFactory School</a>.</p>
                         <p>Ces formations sont intensives et sont l'occasion de développer un savoir-faire unique via un panel de compétences que j'ai pu mettre à profil lors de cas pratiques.</p>
                     </div>
-                    <div class="col s6 hide-on-med-and-down">
-                        <div class="profile valign-wrapper right">
+                    <div class="col s5 hide-on-med-and-down">
+                        <div class="profile right">
                             <img src="assets/images/profil_3.jpg" alt="Photo de présentation" class="img_profile">
                         </div>
                     </div>
