--- a/index.html
+++ b/index.html
@@ -634,6 +634,9 @@
                 <div class="row">
                     <div class="col s12 l6">
                         <div id="modal1" class="modal">
+                            <div class="waiting">
+                                <div class="loader-circle-2"></div>
+                            </div>
                             <div class="modal-content">
                                 <h4 class="right-align">Contact</h4>
                                 <div id="success" class="success"></div>
@@ -673,7 +676,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="input-field col s12 center-align">
-                                            <button class="btn waves-effect waves-light" type="submit" name="action">Envoyer<i class="material-icons right">send</i></button>
+                                            <button class="btn waves-effect waves-light" id="submitted" type="submit" name="action">Envoyer<i class="material-icons right">send</i></button>
                                         </div>
                                     </div>
                                 </form>
