--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <li><a class="head-link" href="#contact">Me contacter</a></li>
         </ul>
         <!-- Mobile Menu -->
+        <h1 class="hidden">Charlotte Saidi - Développeuse Web - Portfolio</h1>
 
         <div id="pageTop" class="main scrollspy">
             <div class="caption">
