politique de confidentialité

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	
         <header>
             <div class="row" style="margin: 0px; text-align: center;">
-                <div class="border-top-right header"></div>
+                <div id="header-border" class="border-top-right hide"></div>
                 <nav class="transparent nav z-depth-2">
                     <div class="logo">
                         <img src="assets/images/logo.png" alt="Logo C.S" class="logo-img">
@@ -242,7 +242,7 @@
                             </div>
                         </div>
 
-                        <div id="block1" class="hide-on-large-only">
+                        <div id="mobileBlock" class="hide-on-large-only">
                             <h5 class="left-align">Langages</h5>
                             <div class="card-panel teal lighten-4 z-depth-4">
                                 <div class="row">
@@ -256,7 +256,7 @@
                                                 HTML5
                                                 </p>
                                                 <div class="progress-bar grey lighten-3">
-                                                    <div id="html" class="progress-inner-bar"></div>
+                                                    <div id="mobile_html" class="progress-inner-bar"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -269,7 +269,7 @@
                                                 CSS3
                                                 </p>
                                                 <div class="progress-bar grey lighten-3">
-                                                    <div id="css" class="progress-inner-bar"></div>
+                                                    <div id="mobile_css" class="progress-inner-bar"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -282,7 +282,7 @@
                                                 JavaScript
                                                 </p>
                                                 <div class="progress-bar grey lighten-3">
-                                                    <div id="js" class="progress-inner-bar"></div>
+                                                    <div id="mobile_js" class="progress-inner-bar"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -295,7 +295,7 @@
                                                 PHP
                                                 </p>
                                                 <div class="progress-bar grey lighten-3">
-                                                    <div id="php" class="progress-inner-bar"></div>
+                                                    <div id="mobile_php" class="progress-inner-bar"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -308,7 +308,7 @@
                                                 SQL
                                                 </p>
                                                 <div class="progress-bar grey lighten-3">
-                                                    <div id="sql" class="progress-inner-bar"></div>
+                                                    <div id="mobile_sql" class="progress-inner-bar"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -328,7 +328,7 @@
                                                 VueJs
                                                 </p>
                                                 <div class="progress-bar grey lighten-3">
-                                                    <div id="vue" class="progress-inner-bar"></div>
+                                                    <div id="mobile_vue" class="progress-inner-bar"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -341,7 +341,7 @@
                                                 BootStrap
                                                 </p>
                                                 <div class="progress-bar grey lighten-3">
-                                                    <div id="bootstrap" class="progress-inner-bar"></div>
+                                                    <div id="mobile_bootstrap" class="progress-inner-bar"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -354,7 +354,7 @@
                                                 Symfony
                                                 </p>
                                                 <div class="progress-bar grey lighten-3">
-                                                    <div id="symfony" class="progress-inner-bar"></div>
+                                                    <div id="mobile_symfony" class="progress-inner-bar"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -367,7 +367,7 @@
                                                 Laravel
                                                 </p>
                                                 <div class="progress-bar grey lighten-3">
-                                                    <div id="laravel" class="progress-inner-bar"></div>
+                                                    <div id="mobile_laravel" class="progress-inner-bar"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -380,7 +380,7 @@
                                                 JQuery
                                                 </p>
                                                 <div class="progress-bar grey lighten-3">
-                                                    <div id="jquery" class="progress-inner-bar"></div>
+                                                    <div id="mobile_jquery" class="progress-inner-bar"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -706,7 +706,7 @@
                                         <p class="col s12">
                                             <label>
                                               <input id="agree" name="agree" type="checkbox" />
-                                              <span>En soumettant ce formulaire, j'accepte que mes données personnelles soient utilisées pour me recontacter. Aucun autre traitement ne sera fait avec mes informations. Pour connaître et exercer mes droits, je peux consulter la <a href="#">Politique de confidentialité</a>.</span>
+                                              <span>En soumettant ce formulaire, j'accepte que mes données personnelles soient utilisées pour me recontacter. Aucun autre traitement ne sera fait avec mes informations. Pour connaître et exercer mes droits, je peux consulter la <a href="policy.html">Politique de confidentialité</a>.</span>
                                             </label>
                                           </p>
                                         <div class="row">
