--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
@@ -706,7 +706,7 @@
                                         <p class="col s12">
                                             <label>
                                               <input id="agree" name="agree" type="checkbox" />
-                                              <span>En soumettant ce formulaire, j'accepte que mes données personnelles soient utilisées pour me recontacter. Aucun autre traitement ne sera fait avec mes informations. Pour connaître et exercer mes droits, je peux consulter la <a href="policy.html">Politique de confidentialité</a>.</span>
+                                              <span>En soumettant ce formulaire, j'accepte que mes données personnelles soient utilisées pour me recontacter. Pour connaître et exercer mes droits, je peux consulter la <a href="policy.html">Politique de confidentialité</a>.</span>
                                             </label>
                                           </p>
                                         <div class="row">
