--- a/policy.html
+++ b/policy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
@@ -32,35 +32,17 @@
             <div class="row" style="margin: 0px; text-align: center;">
                 <div class="border-top-right"></div>
                 <nav class="white nav z-depth-2">
-                    <div class="logo">
+                    <div class="logo hide-on-small-only">
                         <img src="assets/images/logo.png" alt="Logo C.S" class="logo-img">
                     </div>
                     <div class="nav-wrapper col s12 m12">
-                        <ul class="right hide-on-med-and-down">
-                            <li><a class="headlink grey-text tealVersion" href="index.html">Accueil</a></li>
-                            <li><a class="head-link grey-text tealVersion" href="../portfolio/index.html#aPropos">A propos</a></li>
-                            <li><a class="head-link grey-text tealVersion" href="#competences">Compétences</a></li>
-                            <li><a class="head-link grey-text tealVersion" href="#portfolio">Portfolio</a></li>
-                            <li><a class="head-link grey-text tealVersion" href="#formations">Formations</a></li>
-                            <li><a class="head-link grey-text tealVersion" href="#contact">Me contacter</a></li>
+                        <ul class="right">
+                            <li><a class="headlink grey-text tealVersion" href="index.html">Retour au Portfolio</a></li>
                         </ul>
-                        <a href="#" data-target="slide-out" class="sidenav-trigger grey-text right"><i class="material-icons">menu</i></a>
                     </div>
                 </nav>
             </div>
         </header>
-        <!-- Mobile Menu -->
-        <ul id="slide-out" class="sidenav nav right">
-            <li class="border-top-right"></li>
-            <li><a class="sidenav-headlink" href="index.html">Accueil</a></li>
-            <li><a class="sidenav-head-link" href="#aPropos">A propos</a></li>
-            <li><a class="sidenav-head-link" href="#competences">Compétences</a></li>
-            <li><a class="sidenav-head-link" href="#portfolio">Portfolio</a></li>
-            <li><a class="sidenav-head-link" href="#formations">Formations</a></li>
-            <li><a class="sidenav-head-link" href="#contact">Me contacter</a></li>
-            <li class="mobile_nav_logo"><img src="assets/images/logo.png" alt="Logo C.S" class="logo-img"></li>
-        </ul>
-        <!-- Mobile Menu -->
 
         <h1 class="hidden" style="position: absolute; left: -500000px">Charlotte Saidi - Développeuse Web - Portfolio</h1>
 
