--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                             <ul class="demo-3">
                                 <li>
                                     <figure>
-                                        <img src="projet_auto/asset/img/graphisme.png" alt="Maquette du projet AutoLoc Agence"/>
+                                        <img src="auto-loc/asset/img/graphisme.png" alt="Maquette du projet AutoLoc Agence"/>
                                         <figcaption>
                                             <h2 class="teal-text">AutoLoc Agence</h2>
                                             <p>Projet de formation chez WebForce3. Examen des techniques d'intégration Web et responsive.</p>
@@ -579,7 +579,7 @@
                                                 <p class="sub-title title-parts">Liens</p>
                                                 <div class="border-top-right title-parts"></div>
                                             </div>
-                                            <a href="projet_auto/index.html" class="btn-primary btn-small wave-effect" target="_blank">Visiter</a>
+                                            <a href="auto-loc/index.html" class="btn-primary btn-small wave-effect" target="_blank">Visiter</a>
                                         </figcaption>
                                     </figure>
                                 </li>
