--- a/policy.html
+++ b/policy.html
@@ -32,7 +32,7 @@
             <div class="row" style="margin: 0px; text-align: center;">
                 <div class="border-top-right"></div>
                 <nav class="white nav z-depth-2">
-                    <div class="logo hide-on-small-only">
+                    <div class="logo back-logo">
                         <img src="assets/images/logo.png" alt="Logo C.S" class="logo-img">
                     </div>
                     <div class="nav-wrapper col s12 m12">
