--- a/index.html
+++ b/index.html
@@ -532,6 +532,32 @@
                                 </li>
                             </ul>
                         </div>
+
+                        <div class="col s12 l6">
+                            <ul class="demo-3">
+                                <li>
+                                    <figure>
+                                        <img src="assets/images/portfolio.png" alt="Maquette du portoflio"/>
+                                        <figcaption>
+                                            <h2 class="teal-text">Portfolio</h2>
+                                            <p>Version VueJs de mon portfolio. Je découvre le framework et le concept de SPA et m'exerce à son utilisation. Encore en développement, il devrait être déployé d'ici peu. Vous êtes en ce moment sur la version native</p>
+                                            <div class="title">
+                                                <div class="border-top title-parts"></div>
+                                                <p class="sub-title title-parts">Outils</p>
+                                                <div class="border-top-right title-parts"></div>
+                                            </div>
+                                            <p>VueJS <strong class="separator">~</strong> JQuery <strong class="separator">~</strong> MaterializeCss <strong class="separator">~</strong> EmailJs</p>
+                                            <div class="title">
+                                                <div class="border-top title-parts"></div>
+                                                <p class="sub-title title-parts">Liens</p>
+                                                <div class="border-top-right title-parts"></div>
+                                            </div>
+                                            <a href="https://github.com/charlottesaidi/vue-portfolio" class="btn-primary btn-small wave-effect" target="_blank">Code Source</a>
+                                        </figcaption>
+                                    </figure>
+                                </li>
+                            </ul>
+                        </div>
                     
                         <div class="col s12 l6">
                             <ul class="demo-3">
