--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                             <ul class="demo-3">
                                 <li>
                                     <figure>
-                                        <img src="auto-loc/asset/img/graphisme.png" alt="Maquette du projet AutoLoc Agence"/>
+                                        <img src="assets/images/graphisme.png" alt="Maquette du projet AutoLoc Agence"/>
                                         <figcaption>
                                             <h2 class="teal-text">AutoLoc Agence</h2>
                                             <p>Projet de formation chez WebForce3. Examen des techniques d'intégration Web et responsive.</p>
@@ -605,7 +605,7 @@
                                                 <p class="sub-title title-parts">Liens</p>
                                                 <div class="border-top-right title-parts"></div>
                                             </div>
-                                            <a href="auto-loc/index.html" class="btn-primary btn-small wave-effect" target="_blank">Visiter</a>
+                                            <a href="https://charlottesaidi.github.io/auto-loc-exam/" class="btn-primary btn-small wave-effect" target="_blank">Visiter</a>
                                         </figcaption>
                                     </figure>
                                 </li>
