--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                 <div class="container">
                     <div class="row">
                         <ul class="col s12 l6 center-align">
-                            <li><a class="white-text" href="https://fontawesome.com/license" target="_blank">Mentions légales</a></li>
+                            <li><a class="teal-text text-lighten-3" href="https://fontawesome.com/license" target="_blank">FontAwesome License</a></li>
                         </ul>
                         <p class="col s12 l6 center-align white-text">
                             &copy; Charlotte Saidi. 2021.
