--- a/policy.html
+++ b/policy.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <h3 class="center-align">POLITIQUE DE CONFIDENTIALITÉ</h3>
                 <div class="row center">
-                    <p><a href="https://charlottesaidi.github.io/portfolio/">https://charlottesaidi.github.io</a></p>
+                    <p><a href="https://charlottesaidi.github.io/portfolio/">www.charlottesaidi.fr</a></p>
                     <p>Charlotte Saidi</p>
                     <p>Type de site : Portfolio</p>
                 </div>
@@ -104,7 +104,7 @@
                 <ul>
                     <li>si la loi l'exige</li>
                     <li>si elle est requise pour toute procédure judiciaire</li>
-                    <li>pour prouver ou protéger nos droits légaux</li>
+                    <li>pour prouver ou protéger mes droits légaux</li>
                 </ul>
                 <br>
                 <h4>Combien de temps je stock les données personnelles</h4>
