change color style

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="text-caption center-align">
                     <h3 class="grey-text text-darken-3">Charlotte Saidi</h3>
                     <p class="sep"></p>
-                    <h5 class="light grey-text">Développeuse Web Etudiante</h5>
+                    <h5 class="light grey-text text-lighten-1">Développeuse Web Junior</h5>
                 </div>
                 </div>
             </div>
