--- a/policy.html
+++ b/policy.html
@@ -56,7 +56,7 @@
                     <p>Type de site : Portfolio</p>
                 </div>
                 <h4>Objectif de cette politique de confidentialité</h4>
-                <p>L'objectif de cette politique de confidentialité est d'informer les utilisateurs de le site des données personnelles que je recueillerai ainsi que les informations suivantes, le cas échéant :</p>
+                <p>L'objectif de cette politique de confidentialité est d'informer les utilisateurs de ce site des données personnelles que je recueillerai ainsi que les informations suivantes, le cas échéant :</p>
                 <ul>
                     <li>Les données personnelles que je recueille</li>
                     <li>L’utilisation des données recueillies</li>
