--- a/policy.html
+++ b/policy.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="nav-wrapper col s12 m12">
                         <ul class="right">
-                            <li><a class="headlink grey-text tealVersion" href="index.html">Retour au Portfolio</a></li>
+                            <li><a class="headlink grey-text tealVersion" href="https://charlottesaidi.github.io/portfolio/">Retour au Portfolio</a></li>
                         </ul>
                     </div>
                 </nav>
