--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
                                         <p class="col s12">
                                             <label>
                                               <input id="agree" name="agree" type="checkbox" />
-                                              <span>En soumettant ce formulaire, j'accepte que mes données personnelles soient utilisées pour me recontacter. Pour connaître et exercer mes droits, je peux consulter la <a href="policy.html">Politique de confidentialité</a>.</span>
+                                              <span>En soumettant ce formulaire, j'accepte que mes données personnelles soient utilisées pour me recontacter. Pour connaître et exercer mes droits, je peux consulter la <a href="https://charlottesaidi.github.io/portfolio/politique-de-confidentialite">Politique de confidentialité</a>.</span>
                                             </label>
                                           </p>
                                         <div class="row">
