--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                                         <img src="assets/images/portfolio.png" alt="Maquette du portoflio"/>
                                         <figcaption>
                                             <h2 class="teal-text">Portfolio</h2>
-                                            <p>Version VueJs de mon portfolio. Je découvre le framework et le concept de SPA et m'exerce à son utilisation. J'ai tenté le déploiement avec GitHub Pages. Vous êtes en ce moment sur la version native</p>
+                                            <p>Version VueJs de mon portfolio. Je découvre le framework et le concept de SPA et m'exerce à son utilisation. Vous êtes en ce moment sur la version native</p>
                                             <div class="title">
                                                 <div class="border-top title-parts"></div>
                                                 <p class="sub-title title-parts">Outils</p>
